--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SMILE\AppData\Local\Temp\testng-eclipse--700409999\testng-customsuite.xml</span>
+                    <span>C:\Users\SMILE\AppData\Local\Temp\testng-eclipse-776812957\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of selecting and view details of the doctor successfull&quot;, &quot;Select and view details of ...)">runScenario("Verification of selecting and view details of the doctor successfull", "Select and view details of ...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of Appointment confirmation&quot;, &quot;Confirm Appointment successfully&quot;)">runScenario("Verification of Appointment confirmation", "Confirm Appointment successfully")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Login successfully&quot;, &quot;Login&quot;)">runScenario("Login successfully", "Login")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of adding the Patient succesfully&quot;, &quot;Add patient successfully&quot;)">runScenario("Verification of adding the Patient succesfully", "Add patient successfully")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">runScenario("Launching the browser successfully", "Launching the browser")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -128,7 +128,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of selecting and view details of the doctor successfull&quot;, &quot;Select and view details of ...)">runScenario("Verification of selecting and view details of the doctor successfull", "Select and view details of ...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">runScenario("Launching the browser successfully", "Launching the browser")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of adding the Patient succesfully&quot;, &quot;Add patient successfully&quot;)">runScenario("Verification of adding the Patient succesfully", "Add patient successfully")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -151,30 +156,30 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="runScenario(&quot;Verification of selecting and view details of the doctor successfull&quot;, &quot;Select and view details of ...)">
+                  </a> <!-- runScenario("Verification of selecting and view details of the doctor successfull", "Select and view details of ...) -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verification of selecting and view details of the doctor successfull","Select and view details of the doctor")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verification of Appointment confirmation&quot;, &quot;Confirm Appointment successfully&quot;)">
+                  </a> <!-- runScenario("Verification of Appointment confirmation", "Confirm Appointment successfully") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verification of Appointment confirmation","Confirm Appointment successfully")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="runScenario(&quot;Login successfully&quot;, &quot;Login&quot;)">
                   </a> <!-- runScenario("Login successfully", "Login") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("Login successfully","Login")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Verification of adding the Patient succesfully&quot;, &quot;Add patient successfully&quot;)">
-                  </a> <!-- runScenario("Verification of adding the Patient succesfully", "Add patient successfully") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verification of adding the Patient succesfully","Add patient successfully")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">
-                  </a> <!-- runScenario("Launching the browser successfully", "Launching the browser") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Launching the browser successfully","Launching the browser")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -201,10 +206,20 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Verification of selecting and view details of the doctor successfull&quot;, &quot;Select and view details of ...)">
-                  </a> <!-- runScenario("Verification of selecting and view details of the doctor successfull", "Select and view details of ...) -->
+                  <a name="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">
+                  </a> <!-- runScenario("Launching the browser successfully", "Launching the browser") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verification of selecting and view details of the doctor successfull","Select and view details of the doctor")</span>
+                  <span class="parameters">("Launching the browser successfully","Launching the browser")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verification of adding the Patient succesfully&quot;, &quot;Add patient successfully&quot;)">
+                  </a> <!-- runScenario("Verification of adding the Patient succesfully", "Add patient successfully") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verification of adding the Patient succesfully","Add patient successfully")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -214,7 +229,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SMILE\AppData\Local\Temp\testng-eclipse--700409999\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SMILE\AppData\Local\Temp\testng-eclipse-776812957\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -271,31 +286,35 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.runner.TestRunner')
-data.setCell(0, 3, 30672);
+data.setCell(0, 3, 45076);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'com.runner.TestRunner')
-data.setCell(1, 3, 25363);
+data.setCell(1, 3, 28593);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'com.runner.TestRunner')
-data.setCell(2, 3, 5846);
+data.setCell(2, 3, 4883);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
 data.setCell(3, 2, 'com.runner.TestRunner')
-data.setCell(3, 3, 3265);
+data.setCell(3, 3, 3560);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'runScenario')
 data.setCell(4, 2, 'com.runner.TestRunner')
-data.setCell(4, 3, 3107);
+data.setCell(4, 3, 1360);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'runScenario')
 data.setCell(5, 2, 'com.runner.TestRunner')
-data.setCell(5, 3, 1504);
+data.setCell(5, 3, 1142);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'runScenario')
+data.setCell(6, 2, 'com.runner.TestRunner')
+data.setCell(6, 3, 830);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -328,36 +347,40 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.runner.TestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@c497a55)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@26994c6a)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Launching the browser successfully", "Launching the browser")</span>
-                <span class="method-start">4155 ms</span>
+                <span class="method-start">4895 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Login successfully", "Login")</span>
-                <span class="method-start">7270 ms</span>
+                <span class="method-start">6040 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verification of finding the doctor successfully", "Find the doctor")</span>
-                <span class="method-start">37948 ms</span>
+                <span class="method-start">51118 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verification of selecting and view details of the doctor successfull", "Select and view details of ...)</span>
-                <span class="method-start">63315 ms</span>
+                <span class="method-start">79712 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verification schedule the appointment", "Schedule Appointment successfully")</span>
-                <span class="method-start">66585 ms</span>
+                <span class="method-start">81074 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verification of adding the Patient succesfully", "Add patient successfully")</span>
-                <span class="method-start">68092 ms</span>
+                <span class="method-start">81905 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Verification of Appointment confirmation", "Confirm Appointment successfully")</span>
+                <span class="method-start">85465 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">73947 ms</span>
+                <span class="method-start">90353 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
